RESOLVED FIXED106935
[User Timing] INVALID_ACCESS_ERR should be thrown if measuring from a 0 Nav Timing value
https://bugs.webkit.org/show_bug.cgi?id=106935
Summary [User Timing] INVALID_ACCESS_ERR should be thrown if measuring from a 0 Nav T...
James Simonsen
Reported 2013-01-15 12:19:03 PST
[User Timing] INVALID_ACCESS_ERR should be thrown if measuring from a 0 Nav Timing value
Attachments
Patch (6.15 KB, patch)
2013-01-15 12:20 PST, James Simonsen
no flags
James Simonsen
Comment 1 2013-01-15 12:20:22 PST
WebKit Review Bot
Comment 2 2013-01-15 12:59:24 PST
Comment on attachment 182825 [details] Patch Clearing flags on attachment: 182825 Committed r139777: <http://trac.webkit.org/changeset/139777>
WebKit Review Bot
Comment 3 2013-01-15 12:59:27 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.