[User Timing] INVALID_ACCESS_ERR should be thrown if measuring from a 0 Nav Timing value https://bugs.webkit.org/show_bug.cgi?id=106935

Reviewed by Tony Gentilcore.

Source/WebCore:

Test: http/tests/w3c/webperf/submission/Intel/user-timing/test_user_timing_measure_exception.html

* page/PerformanceUserTiming.cpp:
(WebCore::UserTiming::findExistingMarkStartTime):

LayoutTests:

* http/tests/w3c/webperf/submission/Intel/user-timing/test_user_timing_measure_exception-expected.txt:
* http/tests/w3c/webperf/submission/Intel/user-timing/test_user_timing_measure_exception.html:


Canonical link: https://commits.webkit.org/125160@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139777 268f45cc-cd09-0410-ab3c-d52691b4dbfc